--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.4.4",
-    "vue": "^2.6.10"
+    "dotenv": "^8.2.0",
+    "gsap": "^3.1.1",
+    "normalize.css": "^8.0.1",
+    "sass": "^1.25.0",
+    "sass-loader": "^8.0.2",
+    "three": "^0.112.1",
+    "vue": "^2.6.10",
+    "vue-fragment": "^1.5.1",
+    "vue-router": "^3.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -29,7 +38,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
