--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass-loader": "^8.0.2",
     "three": "^0.112.1",
     "vue": "^2.6.10",
+    "vue-agile": "^1.0.11",
     "vue-fragment": "^1.5.1",
     "vue-router": "^3.1.5"
   },
