--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.1.1",
     "locomotive-scroll": "^3.2.10",
     "normalize.css": "^8.0.1",
+    "paper": "^0.12.4",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "three": "^0.112.1",
