--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "three": "^0.112.1",
     "vue": "^2.6.10",
     "vue-agile": "^1.0.11",
+    "vue-audio-visual": "^2.0.0",
     "vue-fragment": "^1.5.1",
     "vue-router": "^3.1.5"
   },
